--- a/style.css
+++ b/style.css
@@ -1,3 +1,57 @@
-header {
-    background-color: #4683DB; 
+Código CSS:
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.cabeçalho {
+    background-color: #07C4D9;
+    display: flex;
+    padding: 24px 0;
+    justify-content: space-around;
+    align-items: center;
+    }
+
+.cabeçalho-título {
+    color: #F26457;
+    font-size: 44px;
+}
+
+.cabeçalho-lista {
+    color: white;
+    font-size: 22px;
+}
+
+.cabeçalho-lista-item1 {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.cabeçalho-lista-item2 {
+    display: inline-block;
+    margin: 0 16px;
+}
+
+.cabeçalho-imagem{
+    width: 10%;
+}
+
+
+.Seção1 {
+    background-image: linear-gradient(#07C4D9, #03393F);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Seção1-div-conteúdo {
+    width: 30%;
+    padding: 24px,0;
+    justify-content: center;
+}
+
+.Seção1-imagem {
+    width: 30%;
 }
